stylesheets/website.css
img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/*#ven {
  width: 55%;
}*/

#cities {
  padding-bottom: 2.5em;
}

#berkeley {
  width: 30%;
}

h1, h2{
  font-family: 'Roboto Condensed', sans-serif;
  text-align: center;
}

h3 {
  font-family: 'Roboto Condensed', sans-serif;
}

.footer {
  margin-top: 3%;
  margin-right: 1%;
  margin-left: 1%;
  font-family: 'Roboto Condensed', sans-serif;
}

a {
  text-decoration: none;
  color: black;
}

#right {
  text-align: right;
  float: right;
}

#artsee {
  color: #E60000;
}

#vendable {
  color: #6DCDEE;
}

#portfolio {
  margin-top: 0;
  margin-right: 1%;
  margin-left: 1%;
  font-family: 'Roboto Condensed', sans-serif;
}

.scarlett {
  color: #8D1919;
}

.logo {
  display: inline;
  padding: 1em;
  padding-bottom: 0;
  height: 50px;
  width: 50px;
}

#networks {
  text-align: center;
}

#venn div{
  height: 450px;
  width: 450px;
  border-radius:50%;
  opacity: .8;
}

#venn {
  text-align: center;
}

.circle {
  display: inline-block;
  font-family: 'Roboto Condensed', sans-serif;
  font-size:50px;
  line-height:450px;
  text-align:center;
}

.left-circle {
  background-color:#E60000;
}

.right-circle {
  background-color:#6DCDEE;
  margin-left: -100px;
}

.middle {
  text-align: center;
  font-family: 'Roboto Condensed', sans-serif;
  font-size:40px;
}

